--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,11 +25,12 @@ requirements:
     - python
     - pip
     - setuptools
-    - cython >=0.24.1
+    - cython >=3.0.8
     - scipy >=1.1.0
-    - numpy >=1.26.4,<2.0.0
+    - numpy >=2.13
   run:
     - python
+    - numpy >=2.13
     - scipy >=1.12.0
     - scikit-image >=0.24.0
     - gsd >3.0.0
